--- a/smart_thrift_frontend/package.json
+++ b/smart_thrift_frontend/package.json
@@ -13,9 +13,11 @@
     "@reduxjs/toolkit": "^1.9.6",
     "@types/yup": "^0.32.0",
     "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
+    "@types/react-currency-format": "^1.0.1",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
